Show deployed/current commit and committer date in footer
Squashed commit of the following:

commit 6403474b97ff93ae263900d065a8c0e86eb21e20
Author: Thomas Schank <DrTom@schank.ch>
Date:   Wed Dec 11 14:45:07 2013 +0100

    Show deployed/current commit and committer date in footer

commit 5ec68de2a9cab1628e63a74f6c83e9945ea10e7b
Author: Thomas Schank <DrTom@schank.ch>
Date:   Wed Dec 11 14:13:03 2013 +0100

    Towards git commit

--- a/app/views/application/_footer.html.haml
+++ b/app/views/application/_footer.html.haml
@@ -12,11 +12,12 @@
         %i.icon-madek.ui-footer-logo
       Z&uuml;rcher Hochschule der K&uuml;nste and contributors
 
-    / / TODO: THOMAS
-    / %p.ui-footer-version
-    /   Last deployment: 
-    /   %a.weak
-    /     Fri, 22 Nov 2013
+    %p.ui-footer-version
+      Aufgespielter Commit 
+      %a.weak{href: "https://github.com/zhdk/madek/commit/#{CurrentCommit.get}", style: "font-family: monospace"}
+        #{CurrentCommit.get.to_s[0..5]} 
+      vom 
+      = l CurrentCommit.get.committer_date, format: :short
 
 - if clipboard
   = render "application/clipboard" unless current_user.is_guest?
