--- a/app/assets/javascripts/views/filter_sets/create_dialog.tmpl.haml
+++ b/app/assets/javascripts/views/filter_sets/create_dialog.tmpl.haml
@@ -5,10 +5,9 @@
         %i.icon-close
       %h3.title-l ${_jed('Create filter set')}
     .ui-modal-body
-      .ui-alert ${_jed('Save the currently selected keywords and filters as a filter set.')}
-      .separator.mtm
+      %p ${_jed('Save the currently selected keywords and filters as a filter set.')}
       .form-body
-        .ui-form-group.rowed
+        .ui-form-group.rowed.compact
           %label.form-label
             ${_jed('Title')}
           .form-item
