--- a/app/assets/javascripts/views/groups/create.tmpl.haml
+++ b/app/assets/javascripts/views/groups/create.tmpl.haml
@@ -6,7 +6,7 @@
         %i.icon-close
     .ui-modal-body
       .form-body
-        .ui-form-group.rowed
+        .ui-form-group.rowed.compact
           %label.form-label
             Titel eingeben
             .form-item.mts
