--- a/app/assets/javascripts/views/media_resources/filter/key.tmpl.haml
+++ b/app/assets/javascripts/views/media_resources/filter/key.tmpl.haml
@@ -9,7 +9,7 @@
   {{if $item.parent.data.filter_type == 'meta_data'}}
   %label.ui-any-value{:title => "${_jed('Any values')}"}
     %input.any-value.hidden{:type => "checkbox"}
-    %i.icon-checkbox.mid
+    %i.icon-checkbox
   {{/if}}
 
 {{/if}}
