--- a/app/assets/javascripts/views/media_sets/create_dialog.tmpl.haml
+++ b/app/assets/javascripts/views/media_sets/create_dialog.tmpl.haml
@@ -6,7 +6,7 @@
       %h3.title-l ${_jed('Create set')}
     .ui-modal-body
       .form-body
-        .ui-form-group.rowed
+        .ui-form-group.rowed.compact
           %label.form-label
             ${_jed('Title')}
           .form-item
