--- a/app/assets/javascripts/views/meta_data/by_type/keywords.tmpl.haml
+++ b/app/assets/javascripts/views/meta_data/by_type/keywords.tmpl.haml
@@ -1,2 +1,2 @@
-%ul.ui-tag-cloud.small
+%ul.ui-tag-cloud.small.ellipsed.compact
   {{tmpl($item.data.raw_value) App.renderPath("meta_data/by_type/keywords/keyword")}}
