--- a/app/assets/stylesheets/_loader.sass
+++ b/app/assets/stylesheets/_loader.sass
@@ -62,6 +62,7 @@
 @import components/ui-info-box
 @import components/ui-metadata-box
 @import components/ui-modals
+@import components/ui-pager
 @import components/ui-preloaders
 @import components/ui-resources-head
 @import components/ui-search-field
@@ -141,9 +142,9 @@
 
 @import views/import
 @import views/my_latest_imports
-@import views/edit_filter_set
 @import views/edit_media_resource
 @import views/edit_multiple_media_entries
+@import views/home
 
 /* Extra
  *-----------------------------------------
