--- a/app/assets/stylesheets/combos/_ui-featured-entries.sass
+++ b/app/assets/stylesheets/combos/_ui-featured-entries.sass
@@ -43,6 +43,7 @@
     background: $mono-brightest
     display: block
     height: 20px
+    text-align: center
     width: 20px
     i
       font-size: 14px
