--- a/app/assets/stylesheets/combos/_ui-resources-list.sass
+++ b/app/assets/stylesheets/combos/_ui-resources-list.sass
@@ -90,6 +90,14 @@
   .ui-resource-meta-content,
   .ui-resource-meta-label
     border: none
+  .ui-resource-meta
+    position: relative
+    table
+      table-layout: fixed
+    .ui-resource-meta-label
+      width: 30%
+    .ui-resource-meta-content
+      width: 70%
 
 /*
  * Active Mode
