--- a/app/assets/stylesheets/general/_buttons.sass
+++ b/app/assets/stylesheets/general/_buttons.sass
@@ -20,6 +20,10 @@ a.strong
 
 a.weak
   color: $mono-strong
+  text-decoration: none
+  &:hover
+    color: $mono-dark
+    text-decoration: none
 
 a:active
   color: $mono-strong
