--- a/app/assets/stylesheets/general/_tables.sass
+++ b/app/assets/stylesheets/general/_tables.sass
@@ -40,7 +40,8 @@ td, th
 /* Borderless Tables
  *----------------------------------------- */
 
-.borderless
+table.borderless
+  tr,
   td,
   caption
-    border: none
+    border: none !important
