--- a/app/views/application/_flash.html.haml
+++ b/app/views/application/_flash.html.haml
@@ -1,4 +1,4 @@
-.ui-alerts
+.ui-alerts.mtm.mhm
   - flashes = [:success, :warning, :error, :notice, :plain]
   - flashes.each do |f|
     - current_flash = flash[f]
