--- a/app/views/keywords/_keyword.html.haml
+++ b/app/views/keywords/_keyword.html.haml
@@ -8,7 +8,7 @@
   end
 
 %li.ui-tag-cloud-item
-  %a.ui-tag-button{:href => link}
+  %a.ui-tag-button{:href => link, :title => keyword[:label]}
     %i.icon-tag-mini.ui-tag-icon
     = keyword[:label]
     - if keyword[:count]
