--- a/app/views/media_sets/parents.html.haml
+++ b/app/views/media_sets/parents.html.haml
@@ -1,6 +1,6 @@
 - content_for :content do
   
-  .ui-container.rounded-right.rounded-bottom.tab-content.bordered
+  .ui-container.rounded-right.rounded-bottom.tab-content.bordered.context-parents
 
     .bright.ui-container.pal.rounded-bottom
 
