--- a/app/views/meta_contexts/abstract.html.haml
+++ b/app/views/meta_contexts/abstract.html.haml
@@ -3,9 +3,9 @@
   
     .ui-container.bright.bordered.pal
       
-      %h2.title-l
+      %h2.title-l.separated.mbl
         = _("These metadata were used most often")
-      %h3.title-s.pbx.mbl.separated
+      %p.mbl
         = _("They show this context's area of focus")
 
       #ui-context-abstract-slider.mbl
