--- a/app/views/styleguide/4 Forms/_forms.html
+++ b/app/views/styleguide/4 Forms/_forms.html
@@ -3,10 +3,9 @@
     <h3>
       <a href="#4.1.1">4.1.1</a>
     </h3>
-    <button class="sg-button sg-view-code">HTML</button>
     <div class="sg-description">
       <span class="sg-filename">_forms.scss</span>
-      <h2>Sample columned form <code>form</code></h2>
+      <h2>Sample rowed form <code>form</code></h2>
     </div>
     <div class="sg-canvases">
       <div class="align-left bg-light sg-canvas">
@@ -71,6 +70,18 @@
                   <input type="text" class="block">
                 </div>
               </div>
+              <div class="ui-form-group rowed">
+                <label class="form-label">
+                  Text
+                  <span class="ui-form-ui-ttip-toggle ui-ttip-toggle" data-placement="left" rel="tooltip" data-original-title="Tooltip Text">
+                    <i class="icon-question"></i>
+                  </span>
+                  <small class="clear">Comment if needed</small>
+                </label>
+                <div class="form-item">
+                  <input type="text" class="block">
+                </div>
+              </div>
               <div class="ui-form-group rowed highlight">
                 <label class="form-label">
                   Textarea
@@ -124,7 +135,6 @@
     <h3>
       <a href="#4.1.1">4.1.1</a>
     </h3>
-    <button class="sg-button sg-view-code">HTML</button>
     <div class="sg-description">
       <span class="sg-filename">_forms.scss</span>
       <h2>Sample columned form <code>form</code></h2>
@@ -244,7 +254,6 @@
     <h3>
       <a href="#4.2">4.2</a>
     </h3>
-    <button class="sg-button sg-view-code">HTML</button>
     <div class="sg-description">
       <span class="sg-filename">_ui-form-alerts.scss</span>
       <h2>Form alerts <code>.ui-datepicker</code></h2>
@@ -263,7 +272,6 @@
     <h3>
       <a href="#4.3">4.3</a>
     </h3>
-    <button class="sg-button sg-view-code">HTML</button>
     <div class="sg-description">
       <span class="sg-filename">_ui-form-group.scss</span>
       <h2>Form group <code>ui-form-group</code></h2>
@@ -454,7 +462,6 @@
     <h3>
       <a href="#4.4">4.4</a>
     </h3>
-    <button class="sg-button sg-view-code">HTML</button>
     <div class="sg-description">
       <span class="sg-filename">_ui-search-field.scss</span>
       <h2>Search input <code>.ui-search</code></h2>
@@ -491,7 +498,6 @@
     <h3>
       <a href="#4.5">4.5</a>
     </h3>
-    <button class="sg-button sg-view-code">HTML</button>
     <div class="sg-description">
       <span class="sg-filename">_multi-select.scss</span>
       <h2>Multi-select form element <code>.multi-select</code></h2>
