--- a/app/views/styleguide/7 Components/_components.html
+++ b/app/views/styleguide/7 Components/_components.html
@@ -115,44 +115,33 @@
         <div style="">
           <ul class="ui-side-navigation">
             <li class="ui-side-navigation-item">
-              <a class="strong" href="#">Katalog</a>
-            </li>
-            <li style="list-style: none; display: inline">
+              <a class="strong" href="/explore/catalog">Katalog</a>
               <ul class="ui-side-navigation-lvl2">
                 <li class="ui-side-navigation-lvl2-item">
-                  <a class="weak" href="#">ZHdK Bereich</a>
+                  <a class="weak" href="/explore/catalog/40">Schlagworte</a>
                 </li>
-                <li class="ui-side-navigation-lvl2-item active">
-                  <a class="weak" href="#">Gattung</a>
-                  <ul class="ui-side-navigation-lvl3">
-                    <li class="ui-side-navigation-lvl3-item">
-                      <a class="weak" href="#">Architektur</a>
-                    </li>
-                    <li class="ui-side-navigation-lvl3-item">
-                      <a class="weak" href="#">Design</a>
-                    </li>
-                    <li class="ui-side-navigation-lvl3-item">
-                      <a class="weak" href="#">Film</a>
-                    </li>
-                    <li class="ui-side-navigation-lvl3-item">
-                      <a class="weak" href="#">Fotografie</a>
-                    </li>
-                  </ul>
-                </li>
+              </ul>
+              <ul class="ui-side-navigation-lvl2">
                 <li class="ui-side-navigation-lvl2-item">
-                  <a class="weak" href="#">Projekttyp</a>
+                  <a class="weak" href="/explore/catalog/99">Gattung</a>
                 </li>
               </ul>
             </li>
+            <li class="separator mini"></li>
             <li class="ui-side-navigation-item">
-              <a class="strong" href="#">Interessante Inhalte</a>
+              <a class="strong" href="/explore/featured_set">Beispielhafte-Sets</a>
             </li>
+            <li class="separator mini"></li>
             <li class="ui-side-navigation-item">
-              <a class="strong" href="#">Neue Inhalte</a>
+              <a class="strong" href="/explore/keywords">Häufige Schlagworte</a>
             </li>
+            <li class="separator mini"></li>
             <li class="ui-side-navigation-item">
-              <a class="strong" href="#">Häufige Schlagworte</a>
+              <a class="strong" href="/explore/contexts">
+                Kontexte
+              </a>
             </li>
+            <li class="separator mini"></li>
           </ul>
         </div>
       </div>
@@ -181,16 +170,19 @@
         <div style="">
           <ul class="ui-tag-cloud">
             <li class="ui-tag-cloud-item">
-              <a href="#" class="ui-tag-button"><i class="icon-tag-mini ui-tag-icon"></i> Kunst <span class="ui-tag-counter">34</span></a>
+              <a href="#" class="ui-tag-button"><i class="icon-tag-mini ui-tag-icon"></i> Kunst <span class="ui-tag-counter">12</span></a>
             </li>
             <li class="ui-tag-cloud-item">
               <a href="#" class="ui-tag-button"><i class="icon-tag-mini ui-tag-icon"></i> Fotografie <span class="ui-tag-counter">34</span></a>
             </li>
             <li class="ui-tag-cloud-item">
-              <a href="#" class="ui-tag-button"><i class="icon-tag-mini ui-tag-icon"></i> Design <span class="ui-tag-counter">34</span></a>
+              <a href="#" class="ui-tag-button"><i class="icon-tag-mini ui-tag-icon"></i> Design <span class="ui-tag-counter">56</span></a>
             </li>
             <li class="ui-tag-cloud-item">
-              <a href="#" class="ui-tag-button"><i class="icon-tag-mini ui-tag-icon"></i> Fotografie <span class="ui-tag-counter">34</span></a>
+              <a href="#" class="ui-tag-button"><i class="icon-tag-mini ui-tag-icon"></i> Fotografie <span class="ui-tag-counter">78</span></a>
+            </li>
+            <li class="ui-tag-cloud-item">
+              <a href="#" class="ui-tag-button"><i class="icon-tag-mini ui-tag-icon"></i> Art <span class="ui-tag-counter">90</span></a>
             </li>
           </ul>
         </div>
@@ -200,16 +192,19 @@
         <div style="">
           <ul class="ui-tag-cloud small">
             <li class="ui-tag-cloud-item">
-              <a href="#" class="ui-tag-button">Kunst</a>
+              <a href="#" class="ui-tag-button"><i class="icon-tag-mini ui-tag-icon"></i> Kunst <span class="ui-tag-counter">12</span></a>
             </li>
             <li class="ui-tag-cloud-item">
-              <a href="#" class="ui-tag-button">Fotografie</a>
+              <a href="#" class="ui-tag-button"><i class="icon-tag-mini ui-tag-icon"></i> Fotografie <span class="ui-tag-counter">34</span></a>
             </li>
             <li class="ui-tag-cloud-item">
-              <a href="#" class="ui-tag-button">Design</a>
+              <a href="#" class="ui-tag-button"><i class="icon-tag-mini ui-tag-icon"></i> Design <span class="ui-tag-counter">56</span></a>
             </li>
             <li class="ui-tag-cloud-item">
-              <a href="#" class="ui-tag-button">Fotografie</a>
+              <a href="#" class="ui-tag-button"><i class="icon-tag-mini ui-tag-icon"></i> Fotografie <span class="ui-tag-counter">78</span></a>
+            </li>
+            <li class="ui-tag-cloud-item">
+              <a href="#" class="ui-tag-button"><i class="icon-tag-mini ui-tag-icon"></i> Art <span class="ui-tag-counter">90</span></a>
             </li>
           </ul>
         </div>
@@ -219,16 +214,19 @@
         <div style="">
           <ul class="ui-tag-cloud large">
             <li class="ui-tag-cloud-item">
-              <a href="#" class="ui-tag-button">Kunst</a>
+              <a href="#" class="ui-tag-button"><i class="icon-tag-mini ui-tag-icon"></i> Kunst <span class="ui-tag-counter">12</span></a>
             </li>
             <li class="ui-tag-cloud-item">
-              <a href="#" class="ui-tag-button">Fotografie</a>
+              <a href="#" class="ui-tag-button"><i class="icon-tag-mini ui-tag-icon"></i> Fotografie <span class="ui-tag-counter">34</span></a>
             </li>
             <li class="ui-tag-cloud-item">
-              <a href="#" class="ui-tag-button">Design</a>
+              <a href="#" class="ui-tag-button"><i class="icon-tag-mini ui-tag-icon"></i> Design <span class="ui-tag-counter">56</span></a>
             </li>
             <li class="ui-tag-cloud-item">
-              <a href="#" class="ui-tag-button">Fotografie</a>
+              <a href="#" class="ui-tag-button"><i class="icon-tag-mini ui-tag-icon"></i> Fotografie <span class="ui-tag-counter">78</span></a>
+            </li>
+            <li class="ui-tag-cloud-item">
+              <a href="#" class="ui-tag-button"><i class="icon-tag-mini ui-tag-icon"></i> Art <span class="ui-tag-counter">90</span></a>
             </li>
           </ul>
         </div>
@@ -251,36 +249,12 @@
             <li class="ui-tag-cloud-item">
               <a href="#" class="ui-tag-button"><i class="icon-tag-mini ui-tag-icon"></i> Natur</a>
             </li>
-            <li class="ui-tag-cloud-item">
-              <a href="#" class="ui-tag-button"><i class="icon-tag-mini ui-tag-icon"></i> Mode</a>
-            </li>
-            <li class="ui-tag-cloud-item">
-              <a href="#" class="ui-tag-button"><i class="icon-tag-mini ui-tag-icon"></i> Outdoor</a>
-            </li>
-            <li class="ui-tag-cloud-item">
-              <a href="#" class="ui-tag-button"><i class="icon-tag-mini ui-tag-icon"></i> Sport</a>
-            </li>
-            <li class="ui-tag-cloud-item">
-              <a href="#" class="ui-tag-button"><i class="icon-tag-mini ui-tag-icon"></i> Natur</a>
-            </li>
           </ul>
         </div>
       </div>
       <div class="align-left bg-light sg-canvas sg-modifier">
         <div style="">
           <ul class="ui-tag-cloud">
-            <li class="ui-tag-cloud-item">
-              <a href="#" class="ui-tag-button person-tag"><i class="icon-user-mini ui-tag-icon"></i> Name, Surname</a>
-            </li>
-            <li class="ui-tag-cloud-item">
-              <a href="#" class="ui-tag-button person-tag"><i class="icon-user-mini ui-tag-icon"></i> Name, Surname</a>
-            </li>
-            <li class="ui-tag-cloud-item">
-              <a href="#" class="ui-tag-button person-tag"><i class="icon-user-mini ui-tag-icon"></i> Name, Surname</a>
-            </li>
-            <li class="ui-tag-cloud-item">
-              <a href="#" class="ui-tag-button person-tag"><i class="icon-user-mini ui-tag-icon"></i> Name, Surname</a>
-            </li>
             <li class="ui-tag-cloud-item">
               <a href="#" class="ui-tag-button person-tag"><i class="icon-user-mini ui-tag-icon"></i> Name, Surname</a>
             </li>
@@ -324,40 +298,63 @@
         <div style="">
           <ul class="ui-tag-cloud">
             <li class="ui-tag-cloud-item">
-              <a href="#" class="ui-tag-button person-tag"><i class="icon-group-mini ui-tag-icon"></i> Group 1</a>
+              <a href="#" class="ui-tag-button person-tag">Term 1</a>
             </li>
             <li class="ui-tag-cloud-item">
-              <a href="#" class="ui-tag-button person-tag"><i class="icon-group-mini ui-tag-icon"></i> Group 2</a>
+              <a href="#" class="ui-tag-button person-tag">Term 2</a>
             </li>
             <li class="ui-tag-cloud-item">
-              <a href="#" class="ui-tag-button person-tag"><i class="icon-group-mini ui-tag-icon"></i> Group 3</a>
+              <a href="#" class="ui-tag-button person-tag">Term 3</a>
             </li>
             <li class="ui-tag-cloud-item">
-              <a href="#" class="ui-tag-button person-tag"><i class="icon-group-mini ui-tag-icon"></i> Group 4</a>
+              <a href="#" class="ui-tag-button person-tag">Term 4</a>
             </li>
             <li class="ui-tag-cloud-item">
-              <a href="#" class="ui-tag-button person-tag"><i class="icon-group-mini ui-tag-icon"></i> Group 5</a>
+              <a href="#" class="ui-tag-button person-tag">Term 5</a>
             </li>
           </ul>
         </div>
       </div>
       <div class="align-left bg-light sg-canvas sg-modifier">
+        <span class="sg-modifier-name">.ellipsed</span>
         <div style="">
-          <ul class="ui-tag-cloud">
+          <ul class="ui-tag-cloud ellipsed">
             <li class="ui-tag-cloud-item">
-              <a href="#" class="ui-tag-button person-tag"><i class="icon-group-mini ui-tag-icon"></i> Group 1</a>
+              <a href="#" class="ui-tag-button" title="Title of a long tag"><i class="icon-tag-mini ui-tag-icon"></i> A rather long tag name to test ellipsed tag clouds <span class="ui-tag-counter">12</span></a>
             </li>
             <li class="ui-tag-cloud-item">
-              <a href="#" class="ui-tag-button person-tag"><i class="icon-group-mini ui-tag-icon"></i> Group 2</a>
+              <a href="#" class="ui-tag-button" title="Title of a long tag"><i class="icon-tag-mini ui-tag-icon"></i> A rather long tag name to test ellipsed tag clouds <span class="ui-tag-counter">34</span></a>
             </li>
             <li class="ui-tag-cloud-item">
-              <a href="#" class="ui-tag-button person-tag"><i class="icon-group-mini ui-tag-icon"></i> Group 3</a>
+              <a href="#" class="ui-tag-button" title="Title of a long tag"><i class="icon-tag-mini ui-tag-icon"></i> A rather long tag name to test ellipsed tag clouds <span class="ui-tag-counter">56</span></a>
             </li>
             <li class="ui-tag-cloud-item">
-              <a href="#" class="ui-tag-button person-tag"><i class="icon-group-mini ui-tag-icon"></i> Group 4</a>
+              <a href="#" class="ui-tag-button" title="Title of a long tag"><i class="icon-tag-mini ui-tag-icon"></i> A rather long tag name to test ellipsed tag clouds <span class="ui-tag-counter">78</span></a>
             </li>
             <li class="ui-tag-cloud-item">
-              <a href="#" class="ui-tag-button person-tag"><i class="icon-group-mini ui-tag-icon"></i> Group 5</a>
+              <a href="#" class="ui-tag-button" title="Title of a long tag"><i class="icon-tag-mini ui-tag-icon"></i> A rather long tag name to test ellipsed tag clouds <span class="ui-tag-counter">90</span></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="align-left bg-light sg-canvas sg-modifier">
+        <span class="sg-modifier-name">.compact</span>
+        <div style="">
+          <ul class="ui-tag-cloud compact">
+            <li class="ui-tag-cloud-item">
+              <a href="#" class="ui-tag-button" title="Title of a long tag"><i class="icon-tag-mini ui-tag-icon"></i> Tag<span class="ui-tag-counter">12</span></a>
+            </li>
+            <li class="ui-tag-cloud-item">
+              <a href="#" class="ui-tag-button" title="Title of a long tag"><i class="icon-tag-mini ui-tag-icon"></i> Tag<span class="ui-tag-counter">34</span></a>
+            </li>
+            <li class="ui-tag-cloud-item">
+              <a href="#" class="ui-tag-button" title="Title of a long tag"><i class="icon-tag-mini ui-tag-icon"></i> Tag<span class="ui-tag-counter">56</span></a>
+            </li>
+            <li class="ui-tag-cloud-item">
+              <a href="#" class="ui-tag-button" title="Title of a long tag"><i class="icon-tag-mini ui-tag-icon"></i> Tag<span class="ui-tag-counter">78</span></a>
+            </li>
+            <li class="ui-tag-cloud-item">
+              <a href="#" class="ui-tag-button" title="Title of a long tag"><i class="icon-tag-mini ui-tag-icon"></i> Tag<span class="ui-tag-counter">90</span></a>
             </li>
           </ul>
         </div>
@@ -1440,8 +1437,39 @@
       <div class="align-left bg-light sg-canvas">
         <div style="padding-top: 50px;margin: 0 auto;padding-right: 50px;padding-bottom: 50px;padding-left: 50px">  <a class="ui-ttip-toggle" title="Tooltip Text">Tooltip toggle</a></div>
       </div>
-      <div class="sg-html">
-        <pre class="prettyprint lang-html">&lt;a class="ui-ttip-toggle" title="Tooltip Text"&gt;Tooltip toggle&lt;/a&gt;</pre>
+    </div>
+  </section>
+</section>
+
+  <section class="sg-example" id="6.21">
+    <h3>
+      <a href="#6.21">6.21</a>
+    </h3>
+
+    <div class="sg-description">
+      <span class="sg-filename">_ui-pager.scss</span>
+      <h2>Pager <code>.ui-pager</code></h2>
+    </div>
+    <div class="sg-canvases">
+      <div class="align-left bg-light sg-canvas">
+        <div>
+          <h3 class="ui-pager">Landschaftsvisualisierung</h3>
+        </div>
+      </div>
+      <div class="align-left bg-light sg-canvas">
+        <div>
+          <h3 class="ui-pager small">Landschaftsvisualisierung</h3>
+        </div>
+      </div>
+      <div class="align-left bg-light sg-canvas">
+        <div>
+          <h3 class="ui-pager large">Landschaftsvisualisierung</h3>
+        </div>
+      </div>
+      <div class="align-left bg-light sg-canvas">
+        <div>
+          <h3 class="ui-pager light">Landschaftsvisualisierung</h3>
+        </div>
       </div>
     </div>
   </section>
