--- a/app/views/styleguide/show.html.haml
+++ b/app/views/styleguide/show.html.haml
@@ -15,13 +15,13 @@
     = csrf_meta_tag
     = yield :head
 
-  %body
+  %body.pbl
 
     .wrapper
 
       %h1.pbl.title-xl Styleguide Madek
 
-    .bordered.ui-container.midtone.rounded.table
+    .bordered.ui-container.midtone.rounded.table.mbl
 
       .app-body-sidebar.table-cell.bright.ui-container.bordered-right.rounded-left.table-side
 
@@ -29,7 +29,7 @@
           - @sections.each_pair do |k,v|
             %a.row{:href => styleguide_path(:section => k)}= k.camelize
 
-      .app-body-content.table-cell.table-substance.ui-container.ptl.pll.prm
+      .app-body-content.table-cell.table-substance.ui-container.pvl.pll.prm
         - if @sections[@current_section]
           - @sections[@current_section].each do |section|
             = render :partial => "styleguide/#{@current_section}/#{section}"
