--- a/app/assets/javascripts/views/groups/edit.tmpl.haml
+++ b/app/assets/javascripts/views/groups/edit.tmpl.haml
@@ -1,4 +1,4 @@
-#workgroup-edit.modal.hide.fade.ui-modal.wide{"aria-hidden" => "true", "aria-labelledby" => "workgroup-edit-label", :role => "dialog", :tabindex => "-1"}
+#workgroup-edit.modal.hide.fade.ui-modal{"aria-hidden" => "true", "aria-labelledby" => "workgroup-edit-label", :role => "dialog", :tabindex => "-1"}
 
   .ui-modal-head
     %a.ui-modal-close{"aria-hidden" => "true", "data-dismiss" => "modal", :type => "button", :title => "Close"}
@@ -11,7 +11,7 @@
       %button.button.small#show-edit-name Titel ändern
 
     .form-body.phm.hidden#edit-name-container
-      .ui-form-group.rowed
+      .ui-form-group.rowed.compact
         %label.form-label
           Titel der Gruppe
 
@@ -25,11 +25,11 @@
   .ui-modal-toolbar.bottom
 
     .form-body.phm
-      .ui-form-group.rowed
+      .ui-form-group.rowed.compact
         %label.form-label
           //# TODO INTERNATIONALIZE
           Person hinzufügen
-          %small Es können nur Personen ausgewählt werden, die sich schon einmal in dieses System eingeloggt haben.
+          %small.clear Es können nur Personen ausgewählt werden, die sich schon einmal in dieses System eingeloggt haben.
 
           .form-item.mts
             %input.block#add-user{:type => "text", :placeholder => "Name der Person", :autofocus => :autofocus}
