--- a/app/assets/javascripts/views/meta_data/by_type/meta_terms/meta_term.tmpl.haml
+++ b/app/assets/javascripts/views/meta_data/by_type/meta_terms/meta_term.tmpl.haml
@@ -1,3 +1,3 @@
-%li.ui-tag-cloud-item
+%li.ui-tag-cloud-item.ellipsed.compact
   %a.ui-tag-button.meta-term{:href => "/media_resources?search=${$item.data.value}"}
     ${$item.data.value}
