--- a/app/assets/stylesheets/components/_ui-alerts.sass
+++ b/app/assets/stylesheets/components/_ui-alerts.sass
@@ -13,10 +13,14 @@
   z-index: 300
 
 .ui-alert
+  +border-radius($border-radius-s)
   background: $mono-bright
-  padding: $space-s
+  padding: $space-x
   font-weight: 600
   text-align: center
+  margin-botom: $space-x
+  &:first-child
+    margin-botom: 0
 
 // Colour variations
 
@@ -24,7 +28,6 @@
 .ui-alert.warning,
 .ui-alert.error,
 .ui-alert.confirmation
-  +box-shadow(inset 0 1px 0 $lighten-less, inset 0 -1px 0 $darken)
   +single-text-shadow(false, 1px, false, false, $darken)
   color: $mono-brightest
 
@@ -39,3 +42,13 @@
 
 .ui-alert.confirmation
   background: $blue
+
+// Home Instance
+
+.app.view-home .ui-alerts
+  margin: 0 !important
+  .ui-alert
+    +border-radius(0)
+    +box-shadow(inset 0 1px 0 $lighten-less, inset 0 -1px 0 $darken)
+    padding: $space-s
+    margin-botom: 0
