--- a/app/assets/stylesheets/components/_ui-form-group.sass
+++ b/app/assets/stylesheets/components/_ui-form-group.sass
@@ -1,29 +1,5 @@
 /**
- * ## Sample columned form `form`
- *
- * Styleguide 4.1.1
-
-/**
- ** ## Sample rowed form `form`
- **
- ** Styleguide 4.1.2
-
-/**
- ** ## Form group `ui-form-group`
- **
- ** .rowed              - Rowed form group
- ** .columned           - Columned
- ** .rowed.highlight    - Highlight variation
- ** .rowed.error        - Error variation
- ** .rowed.compact      - Compact mode
- ** .columned.highlight - Highlight variation
- ** .columned.error     - Error variation
- ** .columned.compact   - Compact mode
- **
- ** Styleguide 4.3
-
-/**
- *  Generic
+ *  Forms
  *----------------------------------------- */
 
 .ui-form-group
@@ -33,7 +9,7 @@
     color: $mono-dark
   &.compact
     margin-bottom: -$space-s
-    padding: $space-s $space-x
+    padding: $space-s 0 !important
   &.minimal
     margin-bottom: 0
     padding: 0
@@ -64,6 +40,10 @@
       font-size: $font-xs
       font-weight: normal
       margin-left: $space-s
+      &.clear
+        display: block
+        clear: both
+        margin-left: 0
   > .form-item
     +micro-clearfix
   > .apply-to-all
@@ -128,11 +108,3 @@
   > .form-item input
     +box-shadow(0 0 5px $yellow)
     border-color: $yellow
-
-/**
- *  Within modals
- *-----------------------------------------
-
-.modal .ui-form-group
-  margin-left: -10px
-  margin-right: -10px
