--- a/app/views/filter_sets/_filter.html.haml
+++ b/app/views/filter_sets/_filter.html.haml
@@ -1,13 +1,15 @@
+- if filter.has_key? :search and not filter[:search].blank?
+  %tr
+    %td.ui-summary-label
+      = _("Filter keyword")
+    %td.ui-summary-content
+      %ul.ui-tag-cloud.small.ellipsed.compact
+        = render :partial => "filter_sets/filter/search", :locals => {:search => filter[:search]}
 %tr
-  %td.ui-summary-label 
+  %td.ui-summary-label
     = _("Filter settings")
   %td.ui-summary-content
-    %ul.ui-tag-cloud.small
-
-      - if filter.has_key? :search and not filter[:search].blank?
-        = render :partial => "filter_sets/filter/search", :locals => {:search => filter[:search]}
-        %br
-
+    %ul.ui-tag-cloud.small.ellipsed.compact
       - if filter.has_key?(:media_resources)
         %i.icon-set.mid.mrx{:title => _("content elements")}
         = render :partial => "filter_sets/filter/media_resources", :locals => {:type => filter[:media_resources][:type][:ids].first}
