--- a/app/views/filter_sets/edit.html.haml
+++ b/app/views/filter_sets/edit.html.haml
@@ -10,9 +10,10 @@
             = _("Edit filter set")
 
         .ui-body-title-actions
-          %a.button
-            %i.icon-close
-            = _("Cancel")
+          / TODO THOMAS
+          / %a.button
+          /   %i.icon-close
+          /   = _("Cancel")
           %a.primary-button{"data-update-filter-set" => true}
             %i.icon-checkmark
             = _("Save filter settings")
