--- a/app/views/filter_sets/filter/meta_data/_any.html.haml
+++ b/app/views/filter_sets/filter/meta_data/_any.html.haml
@@ -1,3 +1,3 @@
 %li.ui-tag-cloud-item
-  %a.ui-tag-button.meta-term{:href => media_resources_path(:meta_data => {key.label => {:ids => ["any"]}})}
+  %a.ui-tag-button.meta-term{:href => media_resources_path(:meta_data => {key.label => {:ids => ["any"]}}), :title => key.all_context_labels}
     = key.all_context_labels
