--- a/app/views/filter_sets/filter/meta_data/_meta_term.html.haml
+++ b/app/views/filter_sets/filter/meta_data/_meta_term.html.haml
@@ -1,3 +1,3 @@
 %li.ui-tag-cloud-item
-  %a.ui-tag-button.meta-term{:href => media_resources_path(:meta_data => {key.label => {:ids => [meta_term.id]}})}
+  %a.ui-tag-button.meta-term{:href => media_resources_path(:meta_data => {key.label => {:ids => [meta_term.id]}}), :title => meta_term}
     = meta_term
