--- a/app/views/filter_sets/filter/permissions/_owner.html.haml
+++ b/app/views/filter_sets/filter/permissions/_owner.html.haml
@@ -1,3 +1,3 @@
 %li.ui-tag-cloud-item
-  %a.ui-tag-button.meta-term{:href => media_resources_path(:permissions => {:owner => {:ids => [user.id]}})}
+  %a.ui-tag-button.meta-term{:href => media_resources_path(:permissions => {:owner => {:ids => [user.id]}}), :title => user}
     = user
