--- a/app/views/keywords/_wrapper.html.haml
+++ b/app/views/keywords/_wrapper.html.haml
@@ -3,13 +3,14 @@
   mine = (defined? mine and mine)
   id ||= nil
 
-.ui-resources-holder{:class => width_limited ? "limited-width" : "", id: id}
-  .ui-resources-header
-    %h2.title-l.ui-resources-title
-      = "#{title}"
-      - if defined? link
-        %a.strong{:href => link} 
-          = _("Show all")
-  %ul.ui-tag-cloud
-    - keywords.each do |keyword|
-      = render :partial => "keywords/keyword", :locals => {:keyword => keyword, :mine => mine}
+.context-fix
+  .ui-resources-holder{:class => width_limited ? "limited-width" : "", id: id}
+    .ui-resources-header
+      %h2.title-l.ui-resources-title
+        = "#{title}"
+        - if defined? link
+          %a.strong{:href => link} 
+            = _("Show all")
+    %ul.ui-tag-cloud
+      - keywords.each do |keyword|
+        = render :partial => "keywords/keyword", :locals => {:keyword => keyword, :mine => mine}
