--- a/app/views/media_entries/_activities.html.haml
+++ b/app/views/media_entries/_activities.html.haml
@@ -6,7 +6,7 @@
   %dd.media-data-content
     .ui-tag-cloud.small
       .ui-tag-cloud-item
-        = link_to(media_resources_path(:search => @media_entry.meta_data.get("uploaded by").to_s), :class => "ui-tag-button person-tag") do
+        = link_to(media_resources_path(:search => @media_entry.meta_data.get("uploaded by").to_s), :class => "ui-tag-button person-tag", :title => @media_entry.meta_data.get("uploaded by")) do
           %i.icon-user-mini.ui-tag-icon
           = @media_entry.meta_data.get("uploaded by")
 
