--- a/app/views/media_sets/abstract.html.haml
+++ b/app/views/media_sets/abstract.html.haml
@@ -4,9 +4,9 @@
 
     .bright.ui-container.pal.rounded-bottom
 
-      %h2.title-l 
+      %h2.title-l.separated.mbl
         = _("These metadata were used most often")
-      %h3.title-s.pbx.mbl.separated
+      %p.mbl
         = _("They show this set's area of focus")
 
       #ui-media-set-abstract-slider.mbl
