--- a/app/views/media_sets/inheritable_contexts.html.haml
+++ b/app/views/media_sets/inheritable_contexts.html.haml
@@ -4,9 +4,9 @@
 
     .bright.ui-container.pal.rounded-bottom
 
-      %h2.title-l 
+      %h2.title-l.separated.mbl
         = _("This set has additional contexts with metadata")
-      %h3.title-s.pbx.mbl.separated
+      %p.mbl
         = _("This allows adding further details to all media entries contained in this set.")
         = _("Furthermore, you may also assign any contexts that are assigned to this set to any set contained within.")
 
@@ -25,11 +25,14 @@
                     %input{:type => :hidden, :name => "individual_context_ids[]", :value => :false}
                     = check_box_tag "individual_context_ids[]", context.id, @media_set.individual_contexts.include?(context), :class => "individual_context", :autocomplete => "off"
                     %strong.ui-context-selection-name= context
-                %td.prm= context.description
                 %td
-                  = link_to "Anzeigen", context_path(context), :target => :_blank
-
-        %button.mtl.primary-button{:type => :submit}
-          = _("Save")
+                  = context.description
+                %td.by-right
+                  = link_to context_path(context), :target => :_blank, :class => "button" do
+                    %i.icon-eye
+                    Anzeigen
+        .ui-actions
+          %button.mtl.primary-button.large{:type => :submit}
+            = _("Save")
 
 = render :partial => "media_sets/layout"
