--- a/app/views/meta_data/_terms.html.haml
+++ b/app/views/meta_data/_terms.html.haml
@@ -1,5 +1,5 @@
 - unless terms.blank?
-  %ul.ui-tag-cloud.small
+  %ul.ui-tag-cloud.small.ellipsed
     - terms.each do |term|
       %li.ui-tag-cloud-item
-        = link_to term, media_resources_path(:meta_data => {key => {:ids => [term.id]}}), :class => "ui-tag-button meta-term"
+        = link_to term, media_resources_path(:meta_data => {key => {:ids => [term.id]}}), :class => "ui-tag-button meta-term", :title => term
