Switching to uuid for pkey of media_resources
Squashed commit of the following:

commit 9d42c6ab86ac1ef27c61e4b325e65b9e00086c06
Author: Thomas Schank <DrTom@schank.ch>
Date:   Tue Dec 17 09:32:01 2013 +0100

    MediaResource uuid RC1

commit ef16e1b853dc4911fd3fac7dbfab83ca2970890f
Author: Thomas Schank <DrTom@schank.ch>
Date:   Tue Dec 17 09:25:10 2013 +0100

    Switching to firefox ...

commit edfc4f2b8bc7563513de79fa96339aee650ce91b
Author: Thomas Schank <DrTom@schank.ch>
Date:   Tue Dec 17 09:06:39 2013 +0100

    Fix js clipboard_controller; removed forgotten redirect

commit 0931814b11a833268eeb4a4fb5acd337d9ef9bd0
Author: Thomas Schank <DrTom@schank.ch>
Date:   Tue Dec 17 07:49:00 2013 +0100

    Fix

commit d1fa3d56079201b01dc08e7a3e906e9a33cef846
Author: Thomas Schank <DrTom@schank.ch>
Date:   Tue Dec 17 07:47:25 2013 +0100

    More like the previous

commit a084212712d6ecd93678d075f702dad7293ce7f9
Author: Thomas Schank <DrTom@schank.ch>
Date:   Tue Dec 17 07:45:37 2013 +0100

    Fix id quoting

commit 858afca4fa96511a4dac2c79452f4c2ef6106e1e
Author: Thomas Schank <DrTom@schank.ch>
Date:   Tue Dec 17 07:42:57 2013 +0100

    Fix

commit 3a8091c727abda2e5b1c8b8cf023416c207568e7
Author: Thomas Schank <DrTom@schank.ch>
Date:   Mon Dec 16 21:33:33 2013 +0100

    One more fix

commit 2d2db75e814e1ee8fb19a1b9016531a70dc22149
Author: Thomas Schank <DrTom@schank.ch>
Date:   Mon Dec 16 21:02:56 2013 +0100

    Fix ...

commit 748f0606cf52bd6279181017720215d8eaf40ce4
Author: Thomas Schank <DrTom@schank.ch>
Date:   Mon Dec 16 19:14:18 2013 +0100

    Fix adding mr to set

commit 16181254bfb7059a4e79af61631dffc6bc9932e6
Author: Thomas Schank <DrTom@schank.ch>
Date:   Mon Dec 16 16:30:04 2013 +0100

    Fix step implementation (should have been buggy before!)

commit c479c59531d90d32b7bcf0b9d6b99d3a8c5af6f8
Author: Thomas Schank <DrTom@schank.ch>
Date:   Mon Dec 16 15:54:03 2013 +0100

    Fix step

commit b2a82a475014aff8971688deadd8a9c5eb0e7a0e
Author: Thomas Sc

--- a/app/views/media_entries/_layout.html.haml
+++ b/app/views/media_entries/_layout.html.haml
@@ -26,7 +26,7 @@
 :coffeescript
   
   jQuery -> new App.MediaEntriesController.Show
-    id: #{@media_entry.id}
+    id: "#{@media_entry.id}"
     media_file:
       width: #{@media_entry.media_file.width.to_json}
       height: #{@media_entry.media_file.height.to_json}
